GH-0: [refactor] Update test logic.